--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,9 @@
                 Pero estadisticamente no lo eres.... por ahora.</p>
                 <p>Subscribete y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en platzi &lt;3
+            </div>
         </div>
     </body>
 </html>
