--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido a Hyperblog 2.0</title>
+    <title>Hyperblog 2.0 es un blog del futuro</title>
     <link rel="stylesheet" href="css/estilos.css" />
 </head>
         <div id="container">
@@ -17,7 +17,7 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo  de inicio donde vamos a explicar las cosas incre&iacute;bles 
                 que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. 
+                <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. 
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres.... por ahora.</p>
                 <p>Subscribete y dale like</p>
