--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                 Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                 Pero estadisticamente no lo eres.... por ahora.</p>
                 <p>Subscribete y dale like</p>
+                <p>Josue Gullo</p>
             </div>
             <div id="footer">
                 Hecho con amor en platzi &lt;3
